--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>What is it about?</title>
+    <title>Get Top Topics!</title>
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen">
     <meta name = "viewport" content = "width=device-width, initial-scale = 1"/>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <style>
     body{
-      background: #202a3f;
+      background: #9cb8b3;
     }
     .container{
-      margin-top: 250px;
+      margin-top: 200px;
     }
     .btn-default{
       font-size: 20px;
-      background: orange;
+      background: #efedce;
       height: 50px;
       width: 150px;
     }
@@ -27,9 +28,49 @@
     .list-group{
       font-size: 20px;
     }
+
+    h1{
+      font: 600 0.5em/1 'Raleway', sans-serif;
+      color: rgba(0,0,0,.5);
+      text-transform: uppercase;
+      letter-spacing: .5em;
+      margin-top: 80px;
+      font-size: 20px;
+      text-align: center;
+    }
+    span, span:after {
+    font-weight: 500;
+    color: #efedce;
+    white-space: nowrap;
+    display: inline-block;
+    position: relative;
+    letter-spacing: .1em;
+    padding: .2em 0 0 0;
+    }
+
+    span {
+    font-size: 4em;
+    z-index: 100;
+    text-shadow: .04em .04em 0 #9cb8b3;
+    }
+
+    span:after {
+    content: attr(data-shadow-text);
+    color: rgba(0,0,0,.35);
+    text-shadow: none;
+    position: absolute;
+    left: .0875em;
+    top: .0875em;
+    z-index: -1;
+    -webkit-mask-image:
+    url(//f.cl.ly/items/1t1C0W3y040g1J172r3h/mask.png);
+    }
+
+
     </style>
   </head>
 <body>
+<h1>Most Significant Words<br><span data-shadow-text="Get-Top-Topics">Get Top Topics</span><br></h1>
 
   <div class = "container">
     <form class="form-default">
@@ -55,17 +96,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
 integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 crossorigin="anonymous"></script>
-<!--
-//   $('form').on('submit', function(event) {
-//
-//     $.ajax({
-//       data : {
-//         input : $('inputURL').val()
-//       },
-//       type : 'POST',
-//       url: '/callback'
-//
-//     }); -->
 <script>
 $("#search").click(function(event) {
    $.ajax({
