--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,70 +8,74 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <style>
+
     body{
-      background: #9cb8b3;
+      background: #202a3f;
     }
-    .container{
-      margin-top: 200px;
+    .sandbox-correct-pronounciation {
+      padding: 10em 0 10em 0;
+    }
+    .heading-correct-pronounciation {
+      margin: auto;
+      text-align: center;
+      position: relative;
     }
     .btn-default{
       font-size: 20px;
-      background: #efedce;
+      background: orange;
       height: 50px;
       width: 150px;
-    }
+      }
     .form-control{
       padding: 20px;
       font-size: 20px;
       height: 50px;
     }
     .list-group{
-      font-size: 20px;
+     font-size: 20px;
+   }
+    h1 {
+      color: #fff;
+      font-family: 'Cardo', serif;
+      font-size: 1.5em;
+      font-weight: normal;
+      font-style: italic;
+      letter-spacing: 0.1em;
+      line-height: 2.2em;
     }
 
-    h1{
-      font: 600 0.5em/1 'Raleway', sans-serif;
-      color: rgba(0,0,0,.5);
+    em {
+      font-family: 'EB Garamond', serif;
+      font-size: 3.5em;
       text-transform: uppercase;
-      letter-spacing: .5em;
-      margin-top: 80px;
-      font-size: 20px;
-      text-align: center;
+      letter-spacing: 0.1em;
+      display: block;
+      font-style:normal;
+      padding-top: 0.1em;
+      text-shadow: 0.07em 0.07em 0 rgba(0, 0, 0, 0.1);
+      &::before, &::after {
+        content: "§";
+        display: inline-block;
+        -webkit-transform: rotate(90deg);
+        -moz-transform: rotate(90deg);
+        -o-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+        transform: rotate(90deg);
+        opacity: 0.2;
+        margin: 0 0.6em;
+        font-size: 0.5em;
+      }
     }
-    span, span:after {
-    font-weight: 500;
-    color: #efedce;
-    white-space: nowrap;
-    display: inline-block;
-    position: relative;
-    letter-spacing: .1em;
-    padding: .2em 0 0 0;
-    }
-
-    span {
-    font-size: 4em;
-    z-index: 100;
-    text-shadow: .04em .04em 0 #9cb8b3;
-    }
-
-    span:after {
-    content: attr(data-shadow-text);
-    color: rgba(0,0,0,.35);
-    text-shadow: none;
-    position: absolute;
-    left: .0875em;
-    top: .0875em;
-    z-index: -1;
-    -webkit-mask-image:
-    url(//f.cl.ly/items/1t1C0W3y040g1J172r3h/mask.png);
-    }
-
-
     </style>
   </head>
 <body>
-<h1>Most Significant Words<br><span data-shadow-text="Get-Top-Topics">Get Top Topics</span><br></h1>
-
+<!-- <h1>Most Significant Words<br><span data-shadow-text="Get-Top-Topics">Get Top Topics</span><br></h1> -->
+<div class="sandbox sandbox-correct-pronounciation">
+  <h1 class="heading heading-correct-pronounciation">
+    Most Significant Words
+    <em>Get Top Topics</em>
+  </h1>
+</div>
   <div class = "container">
     <form class="form-default">
       <div class = "input-group">
