--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
     <title>Get Top Topics!</title>
     <meta name = "viewport" content = "width=device-width, initial-scale = 1"/>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 
     <style>
 
@@ -78,35 +78,12 @@
     </style>
   </head>
 <body>
-
-<div class="sandbox sandbox-correct-pronounciation">
-  <h1 class="heading heading-correct-pronounciation">
-    Most Significant Words
-    <em>Get Top Topics</em>
-  </h1>
+  {% include 'includes/_navbar.html' %}
+<div class="container">
+  {% block body %}{% endblock %}
 </div>
-  <div class = "container">
-    <form class="form-default">
-      <div class = "input-group">
-        <input type = "text" class = "form-control" placeholder = "Enter URL here" id = "inputURL">
-        <div class = "input-group-btn">
-          <button id="search" class = "btn btn-default" type = "submit" >
-            Search
-          </button>
-        </div>
-      </div>
-      <div id="errorAlert" class = "alert alert-danger" role = "alert"  text="Unable to fetch topics for the Input."><p> Invalid Input </p></div>
-      <div id="topicListDiv" name = "topicList">
-
-        <ul class = "list-group">
-          {% for topic in topicsList %}
-            <li class = "list-group-item">{{ topic }}</li>
-          {% endfor %}
-        </ul>
-      </div>
-    </form>
-  </div>
 </body>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
 integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 crossorigin="anonymous"></script>
