Updating About and Contact
Updating About and Contact pages

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,13 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<h1>About Me</h1>
-
-<div>Author: Shefali Sharma</div>
-<div>Masters in Computer Science</div>
-<div>School: State University of New York at Buffalo</div>
-
+<div class="sandbox sandbox-correct-pronounciation">
+  <h1>About Me
+  <!-- <em> -->
+    <div>Author: Shefali Sharma</div>
+    <div>Masters in Computer Science</div>
+    <div>State University of New York at Buffalo</div>
+  <!-- </em> -->
+  </h1>
+<div class="sandbox sandbox-correct-pronounciation">
 {% endblock %}
