--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,10 +1,12 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<h1>Contact Details</h1>
+<div class="sandbox sandbox-correct-pronounciation">
+<h1>Contact Details
 
-Email: sharma92@buffalo.edu
-GitHub: https://github.com/Shefali-Sharma
-LinkedIn: https://www.linkedin.com/in/shefalisharma92/
-
+  <div>Email: sharma92@buffalo.edu</div>
+  <div>GitHub: https://github.com/Shefali-Sharma</div>
+  <div>LinkedIn: https://www.linkedin.com/in/shefalisharma92/</div>
+</h1>
+</div>
 {% endblock %}
