Add Error messages if no topics retrieved
Add Error messages if no topics retrieved - and URL valid.

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,8 @@
           </button>
         </div>
       </div>
-      <div id="errorAlert" class = "alert alert-danger" role = "alert"  text="Unable to fetch topics for the Input."><p> Invalid Input </p></div>
+      <div id="errorAlert" class = "alert alert-danger" role = "alert"  text="Unable to fetch topics for the Input."><p> Invalid Input. </p></div>
+
       <div id="topicListDiv" name = "topicList">
 
         <ul class = "list-group">
