Bugfix and Page Updates
Bugfix and Page Updates

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,12 +2,19 @@
 
 {% block body %}
 <div class="sandbox sandbox-correct-pronounciation">
-  <h1>About Me
-  <!-- <em> -->
-    <div>Author: Shefali Sharma</div>
+  <h1>
+    <em>About Application</em>
+    </br>
+     Given any page (URL), be able to classify the page, and return a list of relevant topics.</br>
+     For a valid URL, results are displayed in a list below as soon as the most significatant words/topics/tags are fetched for that page.
+   </h1>
+ </br>
+  <h1>
+    <em>About Author</em>
+  </br>
+    <div>Shefali Sharma</div>
     <div>Masters in Computer Science</div>
     <div>State University of New York at Buffalo</div>
-  <!-- </em> -->
   </h1>
 <div class="sandbox sandbox-correct-pronounciation">
 {% endblock %}
