--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,9 +2,15 @@
 
 {% block body %}
 <div class="sandbox sandbox-correct-pronounciation">
-<h1>Contact Details
-
+<h1>
+  <em>Contact Details</em>
+</br>
   <div>Email: sharma92@buffalo.edu</div>
+</h1>
+</br>
+<h1>
+  <em>Other Links</em>
+  </br>
   <div>GitHub: https://github.com/Shefali-Sharma</div>
   <div>LinkedIn: https://www.linkedin.com/in/shefalisharma92/</div>
 </h1>
